Fix text visibility

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ All colors MUST be HSL.
     --secondary-foreground: 0 0% 93%;
 
     --muted: 208 13% 85%;
-    --muted-foreground: 208 13% 35%;
+    --muted-foreground: 208 13% 20%;
 
     --accent: 183 100% 35%;
     --accent-foreground: 0 0% 98%;
